2000-08-28  Philipp Thomas  <pthomas@suse.de>

	* ABOUT-GCC-NLS: Remove gettext patches from Paul Eggert as
	they have been incorporated into the gettext CVS. Change the text to
	reflect the current status of NLS. Add instructions for accessing
	the gettext CVS and add the patch from Martin v. Loewis.

2000-08-27  Geoff Keating  <geoffk@cygnus.com>

	* config/rs6000/rs6000.md (movdi_internal64+5): Make SUBREG-safe
	by using gen_lowpart_common.
	(movdi_internal64+6): Likewise.

2000-08-26  Alexandre Oliva  <aoliva@redhat.com>

	* tm.texi (FINI_SECTION_ASM_OP, CRT_CALL_STATIC_FUNCTION):
	Document.

	* config/mn10300/mn10300.h (DBX_REGISTER_NUMBER): Remap register
	numbers to the ranges used by GDB.

2000-08-25  Richard Henderson  <rth@cygnus.com>

	* config/ia64/ia64.h (struct machine_function): Add n_varargs.
	* config/ia64/ia64.c (ia64_compute_frame_size): Use it.
	(ia64_expand_prologue): Likewise.
	(ia64_setup_incoming_varargs): Set it.  Properly skip the current
	argument for stdargs.

2000-08-25  Jason Merrill  <jason@redhat.com>

	* integrate.c (expand_inline_function): Pull out the original decl.

2000-08-25  Jim Wilson  <wilson@cygnus.com>

	* cse.c (cse_insn): Don't pass label subtraction to force_const_mem.

	* function.c (gen_mem_addressof): Clear MEM_ALIAS_SET if no decl.

2000-08-25  Greg McGary  <greg@mcgary.org>

	* flow.c (dump_edge_info): Use ARRAY_SIZE.
	* config/alpha/alpha.c (alpha_expand_block_move): Likewise.

2000-08-25  Richard Earnshaw  <rearnsha@arm.com>

	* arm.h (STRUCT_VALUE): Define to 0, not NULL.

Fri Aug 25 12:52:49 EDT 2000  John Wehle  (john@feith.com)

	* i386.c (ix86_find_base_term): New.
	* i386-protos.h (ix86_find_base_term): Prototype.
	* i386.h (FIND_BASE_TERM): Define.
	* alias.c (find_base_term): Use it.
	* tm.texi (FIND_BASE_TERM): Document it.

	* alias.c (true_dependence, write_dependence_p): Unchanging
	memory can't conflict with non-unchanging memory.

	* alias.c (memrefs_conflict_p): A BLKmode reference